crates/no_expect_outside_tests/ui/fail_expect_in_fn.stderr
error: Avoid calling expect on `std::option::Option<i32>` outside test-only code.
  --> $DIR/fail_expect_in_fn.rs:5:19
   |
LL |     let _result = value.expect("value should exist");
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: The call originates within function `process` which is not recognised as a test.
   = help: Handle the `None` case for `std::option::Option<i32>` or move the code into a test.
note: the lint level is defined here
  --> $DIR/fail_expect_in_fn.rs:1:9
   |
LL | #![deny(no_expect_outside_tests)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^

error: Avoid calling expect on `std::result::Result<(), &str>` outside test-only code.
  --> $DIR/fail_expect_in_fn.rs:10:13
   |
LL |     let _ = result.expect("result should be ok");
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: The call originates within function `fail_result` which is not recognised as a test.
   = help: Handle the `Err` variant of `std::result::Result<(), &str>` or move the code into a test.

error: aborting due to 2 previous errors

